<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
            android:key="theme"
            android:title="@string/theme"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/theme_options"
            android:entryValues="@array/theme_values"
            android:defaultValue="light" />

    <ListPreference
            android:key="fast_forward_speed_multiplier"
            android:title="@string/fast_forward_max_speed"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/fast_forward_speed_multiplier_options"
            android:entryValues="@array/fast_forward_speed_multiplier_values"
            android:defaultValue="-1" />

    <ListPreference
            android:key="frame_limit_speed_multiplier"
            android:title="@string/frame_limit_speed"
            android:summary="%s"
            app:iconSpaceReserved="false"
            android:entries="@array/frame_limit_speed_multiplier_options"
            android:entryValues="@array/frame_limit_speed_multiplier_values"
            android:defaultValue="1" />

    <com.smp.masterswitchpreference.MasterSwitchPreference
            android:key="enable_rewind"
            android:title="@string/rewind"
            app:iconSpaceReserved="false"
            android:fragment="me.magnum.melonds.ui.settings.fragments.RewindPreferencesFragment"
            android:defaultValue="false"
            app:ms_switchOnText="@string/on"
            app:ms_switchOffText="@string/off"
            app:ms_switchThumbColor="?android:colorAccent"
            app:ms_switchTrackColor="@color/prefSwitchRailColor"
            app:ms_switchTextColor="@color/textColorPrimary"
            app:ms_switchOnBackgroundColor="@android:color/transparent"
            app:ms_switchOffBackgroundColor="@android:color/transparent"
            app:ms_switchOffExplanationText="@string/rewind_description"
            app:ms_includedPrefScreen="xml/pref_rewind" />

    <SwitchPreference
            android:key="enable_sustained_performance"
            android:title="@string/sustained_performance_mode"
            android:summary="@string/sustained_performance_mode_summary"
            app:iconSpaceReserved="false"
            android:defaultValue="false" />

    <me.magnum.melonds.ui.settings.preferences.StoragePickerPreference
            android:key="screenshot_directory"
            android:title="@string/screenshot_directory"
            app:iconSpaceReserved="false"
            app:type="directory"
            app:permissions="read_write"
            app:persistPermissions="true" />

    <Preference
            android:key="backup_settings"
            android:title="@string/backup_settings"
            app:isPreferenceVisible="@bool/settings_backup_restore_enabled"
            app:iconSpaceReserved="false" />

    <Preference
            android:key="restore_settings"
            android:title="@string/restore_settings"
            app:isPreferenceVisible="@bool/settings_backup_restore_enabled"
            app:iconSpaceReserved="false" />
</PreferenceScreen>
